# faodel

./: .gitignore  CMakeLists.txt  INSTALL.md  LICENSE.md  NEWS.md  README.md
examples/: CMakeLists.txt  README.md
examples/common/: CMakeLists.txt  README.md
examples/common/backburner/: CMakeLists.txt
examples/common/bootstrap/: CMakeLists.txt  bootstrap_example.cpp
examples/common/data-types/: CMakeLists.txt  main.cpp  nodeid_example.cpp  resourceurl_example.cpp
examples/common/data_types/: CMakeLists.txt  main.cpp  nodeid_example.cpp  resourceurl_example.cpp
examples/common/info-interface/: CMakeLists.txt  info_interface.cpp
examples/common/info_interface/: CMakeLists.txt  info_interface.cpp
examples/common/logging-interface/: CMakeLists.txt  ClassA.cpp  ClassA.hh  ClassB.cpp  ClassB.hh  example1_selectiveA.cpp  example2_disableB.cpp  logging_interface.cpp
examples/common/logging_interface/: CMakeLists.txt  ClassA.hh  ClassB.cpp  ClassB.hh
examples/common/serialization/: CMakeLists.txt  MyContainer.hh  serialization_example.cpp
examples/common/singleton/: CMakeLists.txt  ServiceA.cpp  ServiceA.hh  ServiceB.cpp  ServiceB.hh  ServiceC.cpp  ServiceC.hh  singleton_example.cpp
examples/dirman/: CMakeLists.txt  dirman1-preload-configuration.cpp  dirman2-runtime-define.cpp  example1.cpp  example2.cpp  example3.cpp  example4.cpp  example5.cpp
examples/faodel-cli/: basic-startstop.sh
examples/faodel-cli/playback-scripts/: s01_basic_local.play  s02_trace_pool_example.play  s03_advanced_file_handling.play  s04_bucket_renaming.play  s05_self_contained_pool.play
examples/kelpie/: CMakeLists.txt  README.md
examples/kelpie/compute/: CMakeLists.txt  ex_compute1_pick.cpp  ex_compute2_udf.cpp
examples/kelpie/nonet/: CMakeLists.txt
examples/kelpie/prod-con/: CMakeLists.txt  Globals.cpp  Globals.hh  prod-con.cpp
examples/lunasa/: CMakeLists.txt
examples/lunasa/bootstrap/: CMakeLists.txt  (+1 more)
examples/nnti/: CMakeLists.txt  README.md
examples/opbox/: CMakeLists.txt
examples/services/: CMakeLists.txt  README.md
examples/webhook/: CMakeLists.txt  README.md
examples/whookie/: CMakeLists.txt  bootstrap_example.cpp  killit_example.cpp
src/common/: BackBurner.hh  Bootstrap.cpp  Bootstrap.hh  BootstrapInterface.hh  BootstrapInternal.hh  Bucket.hh  CMakeLists.txt  Configuration.hh  Debug.cpp  InfoInterface.hh  LoggingInterface.cpp  LoggingInterface.hh  LoggingInterfaceMacros.hh  MutexWrapper.cpp  README_Common.md  ResourceURL.cpp  ResourceURL.hh  SerializationHelpers.hh  commonConfig.h.in
src/dirman/: CMakeLists.txt  DirMan.cpp  DirMan.hh  README_DirMan.md
src/faodel-arrow/: ArrowDataObject.cpp  ArrowDataObject.hh  CMakeLists.txt  README_Fado.md
src/faodel-common/: Bootstrap.cpp  Bootstrap.hh  BootstrapImplementation.cpp  BootstrapImplementation.hh  BootstrapInterface.hh  Bucket.cpp  Bucket.hh  CMakeLists.txt  Common.hh  Configuration.cpp  Configuration.hh  Debug.cpp  Debug.hh  DirectoryInfo.cpp  DirectoryInfo.hh  FaodelTypes.hh  InfoInterface.hh  LoggingInterface.cpp  LoggingInterface.hh  LoggingInterfaceMacros.hh  MutexWrapper.cpp  MutexWrapper.hh  NodeID.cpp  NodeID.hh  QuickHTML.cpp  QuickHTML.hh  README_Common.md  ReplyStream.cpp  ReplyStream.hh  ResourceURL.cpp  ResourceURL.hh  SerializationHelpersBoost.hh  SerializationHelpersCereal.hh  StringHelpers.cpp  StringHelpers.hh
src/faodel-services/: BackBurner.cpp  BackBurner.hh  CMakeLists.txt  MPISyncStart.cpp  MPISyncStart.hh  README_Services.md
src/kelpie/: CMakeLists.txt  Kelpie.cpp  Kelpie.hh  Key.cpp  Key.hh  README_Kelpie.md
src/lunasa/: CMakeLists.txt  DataObject.cpp  DataObject.hh  Lunasa.cpp  Lunasa.hh  README_Lunasa.md
src/nnti/: CMakeLists.txt  README.precompile.md  README_NNTI.md  nnti.cpp  nnti.h  nntiConfig.h.in  nntiProbeCereal.cmake  nntiProbeGettid.cmake  nntiProbeNetwork.cmake  nntiProbeThreads.cmake  nntiProbeTimers.cmake  nntiProbeXDR.cmake  nntiProcessXDR.cmake  nnti_buffer.cpp  nnti_buffer.hpp  nnti_callback.cpp  nnti_callback.hpp  nnti_connection.cpp  nnti_connection.hpp  nnti_datatype.hpp  nnti_eq.hpp  nnti_freelist.hpp  nnti_logger.cpp  nnti_logger.h  nnti_logger.hpp  nnti_op.cpp  nnti_op.hpp  nnti_packable.c  nnti_packable.h  nnti_packable.x  nnti_pch.hpp  nnti_peer.hpp  nnti_pid.cpp  nnti_pid.hpp  nnti_serialize.cpp  nnti_serialize.hpp  nnti_state_machine.hpp  nnti_threads.cpp  nnti_threads.h  nnti_threads_types.h  (+16 more)
src/opbox/: CMakeLists.txt  OpBox.cpp  OpBox.hh  README_OpBox.md  opboxConfig.h.in
src/sbl/: CMakeLists.txt  README.precompile.md  README_SBL.md  sblConfig.h.in  sblProbeGettid.cmake  sbl_boost_headers.hh  sbl_logger.cpp  sbl_logger.hh  sbl_source.cpp  sbl_source.hh  sbl_source.hpp  sbl_stream.cpp  sbl_stream.hh  sbl_types.hh  sbl_types.hpp
src/webhook/: CMakeLists.txt  README_WebHook.md  Server.hh  WebHook.hh
src/whookie/: CMakeLists.txt  README_Whookie.md  Server.hh  Whookie.hh
tests/common/: CMakeLists.txt
tests/faodel-arrow/: CMakeLists.txt
tests/kelpie/: CMakeLists.txt
tests/opbox/: CMakeLists.txt
tools/: CMakeLists.txt
tools/faodel-cli/: ActionInterface.hh  CMakeLists.txt  KelpieBlastParams.cpp  KelpieBlastParams.hh  KelpieClientAction.cpp  KelpieClientAction.hh  PlayAction.cpp  PlayAction.hh  README_Faodel_Cli.md  ResourceAction.cpp  ResourceAction.hh  all_in_one.cpp  build_info.cpp  build_info_ib.cpp  config_info.cpp  dirman_server.cpp  faodel_cli.cpp  faodel_cli.hh  kelpie_blast.cpp  kelpie_client.cpp  kelpie_client.hh  kelpie_server.cpp  play.cpp  resource.cpp  resource_client.cpp  resource_client.hh  whookie_client.cpp
tools/faodel-info/: CMakeLists.txt  cmake_info.cpp  faodel_info.cpp  ib_info.cpp
tools/faodel-stress/: CMakeLists.txt  Job.cpp  Job.hh  JobKeys.cpp  JobKeys.hh  JobLocalPool.cpp  JobLocalPool.hh  JobMemoryAlloc.cpp  JobMemoryAlloc.hh  JobSerdes.cpp  JobSerdes.hh  JobWebClient.cpp  JobWebClient.hh  README_Faodel_Stress.md  Worker.cpp  Worker.hh  faodel-stress.cpp
tools/kelpie-server/: CMakeLists.txt  kelpie_server_main.cpp
tools/whookie/: CMakeLists.txt  whookie.cpp
tpl/cereal/: CMakeLists.txt
(+659 files in other folders)
